--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 main{
     flex-grow: 1;
 }
-
+/**/
 .container{
     display: grid;
     gap: 16px;
@@ -21,6 +21,9 @@ main{
     grid-template-areas:
     'item-1-1 item-1-1 item-1-2 item-1-3'
     'item-2-1 item-2-2 item-2-2 item-1-3';
+
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 300px 300px;
 }
 
 .testimonial{
@@ -37,13 +40,34 @@ main{
 }
 
 .item-3{
-    grid-area: item-1-3;
-}
-
-.item-5{
     grid-area: item-2-1;
 }
 
-.item-5{
+.item-4{
     grid-area: item-2-2;
+}
+
+.item-5{
+    grid-area: item-1-3;
+}
+/**/
+.user{
+    display: grid;
+    gap: 16px;
+    grid-template-areas:
+    'user-img user-name'
+    'user-img user-grade';
+    grid-template-columns: 56px auto;
+}
+
+.user-img{
+    grid-area: user-img;
+}
+
+.user-name{
+    grid-area: user-name;
+}
+
+.user-grade{
+    grid-area: user-grade;
 }
