--- a/style.css
+++ b/style.css
@@ -4,31 +4,62 @@
     box-sizing: border-box;
 }
 
+:root{
+    /*Primary colors*/
+    --Purple-50: hsl(260, 100%, 95%);
+    --Purple-300: hsl(264, 82%, 80%);
+    --Purple-500: hsl(263, 55%, 52%);
+    /*Neutral colors*/
+    --White: hsl(0, 0%, 100%);
+    --Grey-100: hsl(214, 17%, 92%);
+    --Grey-200: hsl(0, 0%, 81%);
+    --Grey-400: hsl(224, 10%, 45%);
+    --Grey-500: hsl(217, 19%, 35%);
+    --Dark-blue: hsl(219, 29%, 14%);
+    --Black: hsl(0, 0%, 7%);
+    /*Body font size*/
+    --Font-size: 13px
+}
+
 body{
     min-height: 100svh;
     display: flex;
     flex-direction: column;
+
+    font-size: var(--Font-size);
+    font-family: "Barlow Semi Condensed", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 main{
     flex-grow: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /**/
 .container{
     display: grid;
-    gap: 16px;
+    gap: 24px;
 
     grid-template-areas:
     'item-1-1 item-1-1 item-1-2 item-1-3'
     'item-2-1 item-2-2 item-2-2 item-1-3';
 
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 300px 300px;
+    grid-template-rows: 250px 250px;
+
+    max-width: 1050px;
 }
 
 .testimonial{
     background-color: antiquewhite;
     min-height: 160px;
+
+    border-radius: 15px;
+    padding: 24px 24px;
 }
 
 .item-1{
@@ -53,11 +84,11 @@ main{
 /**/
 .user{
     display: grid;
-    gap: 16px;
+    gap: 2px;
     grid-template-areas:
     'user-img user-name'
     'user-img user-grade';
-    grid-template-columns: 56px auto;
+    grid-template-columns: 40px auto;
 }
 
 .user-img{
@@ -70,4 +101,18 @@ main{
 
 .user-grade{
     grid-area: user-grade;
+}
+/**/
+.user-img img{
+    border-radius: 50%;
+    width: 32px;
+    height: auto;
+}
+
+.experience, .comment{
+    margin-top: 16px;
+}
+
+.experience{
+    font-size: 1.15rem;
 }
