--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body{
     font-family: "Barlow Semi Condensed", sans-serif;
     font-weight: 500;
     font-style: normal;
+
+    background-color: var(--Grey-100);
 }
 
 main{
@@ -60,26 +62,38 @@ main{
 
     border-radius: 15px;
     padding: 24px 24px;
+
+    box-shadow: 32px 48px 24px rgba(0, 0, 0, 0.1);
 }
 
 .item-1{
     grid-area: item-1-1;
+    background-color: var(--Purple-500);
+    color: var(--White);
 }
 
 .item-2{
     grid-area: item-1-2;
+    background-color: var(--Grey-500);
+    color: var(--Grey-100);
 }
 
 .item-3{
     grid-area: item-2-1;
+    background-color: var(--White);
+    color: var(--Dark-blue);
 }
 
 .item-4{
     grid-area: item-2-2;
+    background-color: var(--Dark-blue);
+    color: var(--Grey-200);
 }
 
 .item-5{
     grid-area: item-1-3;
+    background-color: var(--White);
+    color: var(--Dark-blue);
 }
 /**/
 .user{
