--- a/style.css
+++ b/style.css
@@ -130,3 +130,21 @@ main{
 .experience{
     font-size: 1.15rem;
 }
+
+@media (max-width:1050px) {
+    .container{
+        grid-template-rows: auto;
+    }
+}
+
+@media (max-width:600px) {
+    .container{
+        grid-template-areas:
+            'item-1-1'
+            'item-1-2'
+            'item-2-1'
+            'item-2-2'
+            'item-1-3';
+        grid-template-columns: 1fr;
+    }
+}
