--- a/style.css
+++ b/style.css
@@ -137,6 +137,17 @@ main{
     }
 }
 
+@media (max-width:800px) {
+    .container{
+        grid-template-areas:
+        'item-1-1 item-1-1'
+        'item-1-2 item-2-1'
+        'item-2-2 item-1-3';
+
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
 @media (max-width:600px) {
     .container{
         grid-template-areas:
