--- a/style.css
+++ b/style.css
@@ -53,19 +53,19 @@ main{
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
 
-    max-width: 1140px;
+    max-width: 1100px;
 }
 
 .testimonial{
     background-color: antiquewhite;
     min-height: 160px;
 
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 32px;
 
     box-shadow: 32px 48px 40px rgba(72, 85, 106, 0.3);
     font-size: 13px;
-    line-height: 1.6;
+    line-height: 1.4;
 }
 
 .item-1{
@@ -100,14 +100,13 @@ main{
 /**/
 .user{
     display: grid;
-    gap: 2px;
     grid-template-areas:
     'user-img user-name'
     'user-img user-grade';
-    grid-template-columns: 32px auto;
+    grid-template-columns: 48px auto;
 
     align-items: center;
-    gap: 4px;
+    gap: 0px;
 }
 
 .user-img{
@@ -117,12 +116,16 @@ main{
 .user-name{
     grid-area: user-name;
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 0.85rem;
+    margin-top: -4px;
+    opacity: 0.8;
 }
 
 .user-grade{
     grid-area: user-grade;
-    font-size: 0.85rem;
+    font-size: 0.75rem;
+    margin-top: -6px;
+    opacity: 0.8;
 }
 /**/
 .user-img img{
@@ -135,12 +138,12 @@ main{
 .comment{
     margin-top: 16px;
     font-size: 13px;
-    line-height: 1.6;
-    opacity: 0.9;
+    line-height: 1.4;
+    opacity: 0.8;
 }
 
 .experience{
-    font-size: 1rem;
+    font-size: 1.25rem;
     margin-top: 20px;
     font-weight: 600;
 }
@@ -151,7 +154,7 @@ main{
     }
 }
 
-@media (max-width:800px) {
+@media (max-width:900px) {
     .container{
         grid-template-areas:
         'item-1-1 item-1-1'
@@ -166,7 +169,7 @@ main{
     body {
         padding: 40px 16px;
     }
-    
+
     .container{
         grid-template-areas:
             'item-1-1'
@@ -175,5 +178,7 @@ main{
             'item-2-2'
             'item-1-3';
         grid-template-columns: 1fr;
+
+        max-width: 305px;
     }
 }
