--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ main{
     grid-area: item-1-1;
     background-color: var(--Purple-500);
     color: var(--White);
+
+    background-image: url('./testimonials-grid-section-main/images/bg-pattern-quotation.svg');
+    background-repeat: no-repeat;
+    background-position: top right 58px;
 }
 
 .item-2{
@@ -144,7 +148,7 @@ main{
 
 .experience{
     font-size: 1.25rem;
-    margin-top: 20px;
+    margin-top: 8px;
     font-weight: 600;
 }
 
@@ -180,5 +184,9 @@ main{
         grid-template-columns: 1fr;
 
         max-width: 305px;
+    }
+
+    .item-1{
+        background-image: none;
     }
 }
